add footer and nav

--- a/app/core/footer.scss
+++ b/app/core/footer.scss
@@ -1,4 +1,8 @@
 .footer {
     position: fixed;
     bottom: 0;
+    height: 40px;
+    background-color: mintcream;
+    width: 100%;
+    left: 0;
 }
