--- a/app/core/navi.scss
+++ b/app/core/navi.scss
@@ -1,4 +1,32 @@
 .navigation {
     position: fixed;
     top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: darkseagreen;
+
+    &_header {
+        display: inline-block;
+        font-size: 16px;
+        margin-left: 16px;
+        color: azure;
+    }
+
+    &_user-bar {
+        position: absolute;
+        right: 10px;
+        height: 40px;
+        display: inline-block;
+
+        &_logout,
+        &_login {
+            height: 50%;
+            margin-top: 12px;
+            display: block;
+            color: azure;
+            font-size: 16px;
+        }
+    }
 }
