--- a/app/core.scss
+++ b/app/core.scss
@@ -1,2 +1,2 @@
-@import "./core/navi.scss";
-@import "./core/footer.scss";
+@import "./core/containers/navi.scss";
+@import "./core/containers/footer.scss";
