--- a/app/core.scss
+++ b/app/core.scss
@@ -1,2 +1,4 @@
 @import "./core/containers/navi.scss";
 @import "./core/containers/footer.scss";
+@import "./core/components/modal.scss";
+@import "./core/components/form.scss";
