--- a/app/core.scss
+++ b/app/core.scss
@@ -2,3 +2,6 @@
 @import "./core/containers/footer.scss";
 @import "./core/components/modal.scss";
 @import "./core/components/form.scss";
+@import "./core/components/inputField.scss";
+@import "./core/components/link.scss";
+@import "./core/components/control.scss";
