--- a/app/core/containers/footer.scss
+++ b/app/core/containers/footer.scss
@@ -1,8 +1,33 @@
 .footer {
     position: fixed;
     bottom: 0;
-    height: 40px;
-    background-color: mintcream;
+    height: 120px;
+    background-color: #4caf50;
     width: 100%;
     left: 0;
+    font-family: fantasy;
+
+    &_link-group {
+    	display: inline-block;
+    	width: 200px;
+    	vertical-align: top;
+
+    	&_title {
+    		margin: 0 auto;
+    		width: 100%;
+    		display: block;
+    		text-align: center;
+    		color: lavender;
+    	}
+
+    	.link {
+    		padding: 2px 0;
+    		font-size: 12px;
+    		text-align: center;
+
+    		a {
+    			color: floralwhite;
+    		}
+    	}
+    }
 }
