--- a/app/core/containers/navi.scss
+++ b/app/core/containers/navi.scss
@@ -5,7 +5,8 @@
     display: block;
     width: 100%;
     height: 40px;
-    background-color: darkseagreen;
+    background-color: #2196f3;
+    font-family: fantasy;
 
     &_header {
         display: inline-block;
