--- a/app/core/containers/footer.scss
+++ b/app/core/containers/footer.scss
@@ -27,6 +27,10 @@
 
     		a {
     			color: floralwhite;
+
+    			&:hover {
+    				text-decoration: underline;
+    			}
     		}
     	}
     }
