--- a/app/core/components/modal.scss
+++ b/app/core/components/modal.scss
@@ -8,7 +8,7 @@
 	opacity: 0.5;
 
 	.loader {
-		background: url('../assets/ring-alt.gif');
+		background: url('../assets/gears.svg');
 		width: 130px;
 		height: 130px;
 		margin-left: calc(50% - 65px);
