--- a/app/core.scss
+++ b/app/core.scss
@@ -5,3 +5,5 @@
 @import "./core/components/inputField.scss";
 @import "./core/components/link.scss";
 @import "./core/components/control.scss";
+@import "./product/containers/productList.scss";
+@import "./product/components/product.scss";
