--- a/app/core/containers/navi.scss
+++ b/app/core/containers/navi.scss
@@ -28,6 +28,7 @@
             display: block;
             color: azure;
             font-size: 16px;
+            cursor: pointer;
         }
     }
 }
