--- a/app/core.scss
+++ b/app/core.scss
@@ -7,3 +7,5 @@
 @import "./core/components/control.scss";
 @import "./product/containers/productList.scss";
 @import "./product/components/product.scss";
+@import "./product/containers/productDetail.scss";
+@import "./product/components/detail.scss";
